# turtlebot_formation2

./: CMakeLists.txt  LICENSE  README.md  package.xml  移植本机.md
config/: local_costmap_params.yaml  plan_params.yaml
include/: EigenType.h  common_type.h  vis_ros1.hpp
launch/: All5_multi_turtlebot3.launch  All_multi_turtlebot3.launch  Leader_navigation.launch  col.launch  esdf_map.launch  hexagon.launch  hexagon_base.launch  mpc_hexagon.launch  multi_turtlebot3_0_navigation.launch  navigation_avoid.launch  testAvoid.launch
launch/include/: Amcl_tb3_0.launch  laserScan.launch  move_base.launch  multiAvoid.launch
rviz/: local_map_test.rviz  multi_diffcar.rviz  turtlebot3_navigation.rviz
scripts/: laserTracker.py
src/: leader.cpp  leader1.cpp  multi_avoidance.cpp  slave_avoid.cpp  slave_tf_listener.cpp  slave_tf_listener.hpp  slave_tf_listener2.cpp  slave_tf_listener3.cpp  testSub.cc  tf_broadcaster.cpp
src/esdf_map/: fusion_esdf.cc  fusion_esdf.h  fusion_esdf_node.cc  get_pose_helper.h  pcl_df_utils.h  sensor_data_process.cpp  sensor_data_process.h
src/nmpc_ctrl/: mpc_leader.cc  nmpc_ctrl.cc  nmpc_ctrl.h  nmpc_leader.cc  nmpc_leader.h
urdf_user/: gazebo_turtlebot3_burger.urdf.xacro  gazebo_turtlebot3_waffle.urdf.xacro
urdf_user/turtlebot_urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro
world/: empty.world
